# claudemetry

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  mise.toml  wrangler.toml
.claude/commands/: model-compare.md
burnage/: Cargo.toml  build.rs
burnage/src/: backfill.rs  main.rs  parallel.rs  quota.rs  search.rs  shell.rs  turn.rs  usage.rs
dashboard/: package.json  pnpm-lock.yaml  wrangler.jsonc
dashboard/src/components/: CommandPalette.tsx  KpiCard.astro  KpiValue.tsx  LiveHeaderStats.tsx  MixBar.astro  RecentTurnsTable.tsx  RowsPoller.tsx  SessionTimelineChart.tsx  SessionTurnsTable.tsx  Sidebar.tsx  Sparkline.astro  TimeWindowPill.tsx  TokenChart.tsx  ToolFrequency.astro  TurnDetail.tsx  WsClient.tsx  table-cells.tsx
dashboard/src/components/charts/: ChartTooltipCard.tsx  TokenAreaChart.tsx
dashboard/src/components/ui/: button.tsx  chart.tsx  dropdown-menu.tsx  input.tsx  table.tsx
dashboard/src/components/ui/data-table/: data-table-faceted-filter.tsx  data-table-toolbar.tsx  data-table-view-options.tsx
dashboard/src/layouts/: Base.astro
dashboard/src/lib/: format.ts  links.ts  pillWindow.ts  rowsBus.ts  sessions.ts  stop.ts  store.ts
dashboard/src/pages/: index.astro  setup.astro
dashboard/src/pages/api/: in_flight.ts  recent.ts  sessions.json.ts  stats.ts  turn.ts
dashboard/src/pages/api/session/: turns.ts
dashboard/src/pages/session/: [id].astro
dashboard/src/styles/: global.css
plugins/burnage/: README.md
plugins/burnage/hooks/: hooks.json
scripts/: cf-access.sh
src/: lib.rs
