[workspace]
members = ["burnage"]

[package]
name = "claudemetry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8" }
worker-macros = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
wasm-bindgen = "0.2"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
