[workspace]
members = ["burnage"]

[package]
name = "burnage-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8" }
worker-macros = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
hex = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
