[package]
name = "burnage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "burnage"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossterm = "0.28"
